- Added the search logic to the navbar - Adding pipes to format strings on heroes displaying

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -19,8 +19,8 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="text" placeholder="Search heroe" aria-label="Search" (keyup.enter)="buscarHeroe(textoBusqueda.value)" #textoBusqueda>
+      <button (click)="buscarHeroe(textoBusqueda.value)" class="btn btn-outline-primary my-2 my-sm-0" type="button">Search</button>
     </form>
   </div>
 </nav>
